data/derived/sp14/progs/unify/prog0787.ml.out
Characters 27-28:
  let _ = fixpoint (collatz, 1);;
                             ^
Error: This expression has type int but an expression was expected of type
         string
